<resources>

    <!-- Strings related to App -->

    <string name="app_name">远程监控</string>
    <string name="app_author">bajdcc</string>
    <string name="app_test">测试</string>
    <string name="app_update">更新</string>
    <string name="app_exit">退出</string>
    <string name="main_title">远程监控</string>
    <string name="drawer_item_home">主页</string>
    <string name="drawer_item_home_desc">显示连接状态</string>
    <string name="drawer_item_settings">设置</string>
    <string name="drawer_item_settings_desc">设置服务器</string>
    <string name="drawer_item_about">关于</string>
    <string name="drawer_item_about_desc">关于本程序</string>
    <string name="drawer_item_section_header">控制台</string>
    <string name="drawer_item_console_old">旧版</string>
    <string name="drawer_item_console_old_desc">控制锁屏</string>
    <string name="drawer_item_console_new">新版</string>
    <string name="drawer_item_console_new_desc">控制弹幕</string>
    <string name="drawer_item_console_notify">开启消息推送功能</string>
    <string name="drawer_item_console_mqtt">推送</string>
    <string name="drawer_item_console_mqtt_desc">接收消息</string>
    <string name="title_activity_settings">设置</string>

    <string name="about">Remote Console v1.2\n2016 Made by bajdcc.\nhttp://github.com/RemoteConsole</string>

    <!-- Strings related to Pushing -->
    <string name="pushing_start">启动服务</string>
    <string name="pushing_stop">停止服务</string>
    <string name="pushing_message">这是一则消息。</string>

    <string name="pushing_nav_prev">上一首</string>
    <string name="pushing_nav_next">下一首</string>
    <string name="pushing_prev">左滑</string>
    <string name="pushing_next">右滑</string>
    <string name="pushing_play">播放</string>
    <string name="pushing_cycle">循环</string>
    <string name="pushing_danmuku">弹幕</string>

    <!-- Strings related to Status -->
    <string name="text_test_start">Testing("%s")...</string>
    <string name="text_test_retry">Retrying(%d)...</string>

    <!-- Strings related to Old Console -->
    <string name="static_str_not_conn">未连接</string>
    <string name="static_str_conn">已连接</string>
    <string name="static_str_btm_exit">退出</string>
    <string name="static_str_no_msg">未收到消息</string>
    <string name="static_str_ip_def">192.168.1.100</string>
    <string name="static_str_port_def">7779</string>
    <string name="static_str_btn_conn">测试主机</string>
    <string name="static_str_btn_lock">锁定</string>
    <string name="static_str_no_status">未收到消息</string>
    <string name="static_str_btn_input">发送消息</string>
    <string name="static_str_input">请输入文字</string>
    <string name="static_str_secret_prefix">Post$bajdcc_console#</string>
    <string name="static_btn_f1">F1</string>
    <string name="static_btn_f6">F6</string>
    <string name="static_btn_f3">F3</string>
    <string name="static_btn_01">1</string>
    <string name="static_btn_02">2</string>
    <string name="static_btn_03">3</string>
    <string name="static_btn_04">4</string>
    <string name="static_btn_05">5</string>
    <string name="static_btn_06">6</string>
    <string name="static_btn_07">7</string>
    <string name="static_btn_00">0</string>
    <string name="static_btn_d1">增加音量</string>
    <string name="static_btn_d2">减少音量</string>
    <string name="static_btn_d3">静音</string>
    <string name="static_btn_d4">模糊</string>
    <string name="msg_IR">query host is running</string>
    <string name="msg_00">Time stopped.</string>
    <string name="msg_01">All lock window.</string>
    <string name="msg_02">Some transparent window.</string>
    <string name="msg_03">All transparent window.</string>
    <string name="msg_04">All transparent and fade window.</string>
    <string name="msg_05">Hide Window.</string>
    <string name="msg_06">Hide text.</string>
    <string name="msg_07">Show text.</string>
    <string name="msg_F1">Timer show.</string>
    <string name="msg_F3">Host stopped locking.</string>
    <string name="msg_F6">Clip background.</string>
    <string name="msg_ST">query host start lock</string>
    <string name="msg_d1">Set volume increase.</string>
    <string name="msg_d2">Set volume decrease.</string>
    <string name="msg_d3">Set volume mute or not.</string>
    <string name="msg_d4">Set blur enabled or not.</string>

    <!-- Strings related to Settings -->
    <string name="new_console_input">请输入文字</string>
    <string name="new_console_send_msg">发送警告</string>
    <string name="new_console_lock">远程锁定</string>
    <string name="new_console_input_user">请输入用户名</string>
    <string name="new_console_input_message">请输入内容</string>
    <string name="new_console_warn">警告</string>
    <string name="new_console_send_popup">发送弹幕</string>
    <string name="new_console_close_popup">关闭弹幕</string>
    <string name="new_console_toggle_popup">调整弹幕</string>

    <!-- Example General settings -->
    <string name="pref_header_general">通用</string>

    <string name="pref_title_general_username">用户名</string>
    <string name="pref_default_general_username">User</string>

    <string name="pref_title_general_ip">地址</string>
    <string name="pref_default_general_ip">192.168.1.100</string>

    <string name="pref_title_general_port">端口</string>
    <string name="pref_default_general_port">80</string>

    <string name="pref_title_general_share_images">显示分享图片</string>
    <string name="pref_default_general_share_images">false</string>

    <string name="pref_title_general_mqtt">推送端口</string>
    <string name="pref_default_general_mqtt">1883</string>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">同步</string>

    <string name="pref_title_sync_frequency">频率</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">启用同步</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">通知</string>

    <string name="pref_title_new_message_notifications">启用消息通知</string>

    <string name="pref_title_ringtone">铃声</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">震动</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
