<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_general_username"
        android:inputType="textCapWords"
        android:key="general_username"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_general_username" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_general_ip"
        android:inputType="textCapWords"
        android:key="general_ip"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_general_ip" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_general_port"
        android:inputType="number"
        android:key="general_port"
        android:maxLines="1"
        android:maxLength="5"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_general_port" />

    <SwitchPreference
        android:defaultValue="@string/pref_default_general_share_images"
        android:key="general_image"
        android:title="@string/pref_title_general_share_images" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_general_mqtt"
        android:inputType="number"
        android:key="general_mqtt"
        android:maxLines="1"
        android:maxLength="5"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_general_mqtt" />

</PreferenceScreen>
