<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.bajdcc.cmd.remoteconsole.OldConsoleActivity">

    <EditText
        android:id="@+id/edit_IP"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:fitsSystemWindows="true"
        android:hint="@string/static_str_ip_def"
        android:inputType="textUri"
        android:maxLength="@integer/max_len_ip"
        android:singleLine="true"
        android:text="@string/static_str_ip_def"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView_status"
        android:layout_width="300dp"
        android:layout_height="20dp"
        android:layout_alignLeft="@+id/edit_IP"
        android:layout_below="@+id/edit_IP"
        android:text="@string/static_str_not_conn"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/edit_PORT"
        android:layout_width="70dp"
        android:layout_height="35dp"
        android:layout_above="@+id/textView_status"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:editable="false"
        android:ems="10"
        android:fitsSystemWindows="true"
        android:hint="@string/static_str_port_def"
        android:inputType="number"
        android:maxLength="@integer/max_len_port"
        android:singleLine="true"
        android:text="@string/static_str_port_def"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/editText_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView_status"
        android:layout_alignRight="@+id/edit_PORT"
        android:layout_below="@+id/textView_status"
        android:ems="10"
        android:hint="@string/static_str_no_msg"
        android:inputType="textMultiLine"
        android:lines="3"
        android:text="@string/static_str_no_msg"
        android:textSize="12sp">

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/ButtonF1"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/editText_msg"
        android:layout_below="@+id/editText_msg"
        android:layout_marginTop="14dp"
        android:text="@string/static_btn_f1"
        android:textSize="12sp" />

    <Button
        android:id="@+id/ButtonF3"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_alignBaseline="@+id/ButtonF1"
        android:layout_alignBottom="@+id/ButtonF1"
        android:layout_toRightOf="@+id/ButtonF1"
        android:text="@string/static_btn_f3"
        android:textSize="12sp" />

    <Button
        android:id="@+id/ButtonF6"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_alignBaseline="@+id/ButtonF3"
        android:layout_alignBottom="@+id/ButtonF3"
        android:layout_toRightOf="@+id/ButtonF3"
        android:text="@string/static_btn_f6"
        android:textSize="12sp" />

    <Button
        android:id="@+id/Button01"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/ButtonF1"
        android:layout_below="@+id/ButtonF1"
        android:text="@string/static_btn_01"
        android:textSize="12sp" />

    <Button
        android:id="@+id/Button02"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_below="@+id/ButtonF1"
        android:layout_toRightOf="@+id/ButtonF1"
        android:text="@string/static_btn_02"
        android:textSize="12sp" />

    <Button
        android:id="@+id/Button03"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_below="@+id/ButtonF3"
        android:layout_toRightOf="@+id/ButtonF3"
        android:text="@string/static_btn_03"
        android:textSize="12sp" />

    <Button
        android:id="@+id/Button04"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_below="@+id/ButtonF6"
        android:layout_toRightOf="@+id/ButtonF6"
        android:text="@string/static_btn_04"
        android:textSize="12sp" />

    <Button
        android:id="@+id/Button05"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/Button01"
        android:layout_below="@+id/Button01"
        android:text="@string/static_btn_05"
        android:textSize="12sp" />

    <Button
        android:id="@+id/Button06"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_below="@+id/Button01"
        android:layout_toRightOf="@+id/Button01"
        android:text="@string/static_btn_06"
        android:textSize="12sp" />

    <Button
        android:id="@+id/Button07"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_below="@+id/Button02"
        android:layout_toRightOf="@+id/Button02"
        android:text="@string/static_btn_07"
        android:textSize="12sp" />

    <Button
        android:id="@+id/Button00"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_below="@+id/Button03"
        android:layout_toRightOf="@+id/Button03"
        android:text="@string/static_btn_00"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/editText_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/static_str_input"
        android:inputType="textMultiLine"
        android:lines="2"
        android:maxLength="500"
        android:textSize="12.0sp"
        android:layout_below="@+id/Button_d2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/editText_msg"
        android:layout_alignEnd="@+id/editText_msg" />

    <Button
        android:id="@+id/button_conn"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:text="@string/static_str_btn_conn"
        android:textSize="12sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/button_input"
        android:layout_width="70.0dip"
        android:layout_height="40.0dip"
        android:text="@string/static_str_btn_input"
        android:textSize="12.0sp"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/Button_lock"
        android:layout_toEndOf="@+id/Button_lock" />

    <Button
        android:id="@+id/button_exit"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/static_str_btm_exit"
        android:textSize="12sp" />

    <Button
        android:id="@+id/Button_lock"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:text="@string/static_str_btn_lock"
        android:textSize="12sp"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/button_conn"
        android:layout_toEndOf="@+id/button_conn" />

    <Button
        android:id="@+id/Button_d2"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_below="@+id/Button05"
        android:layout_toRightOf="@+id/Button05"
        android:text="@string/static_btn_d2"
        android:textSize="12sp" />

    <Button
        android:id="@+id/Button_d1"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/Button05"
        android:layout_below="@+id/Button05"
        android:text="@string/static_btn_d1"
        android:textSize="12sp" />

    <Button
        android:id="@+id/Button_d3"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_below="@+id/Button06"
        android:layout_toRightOf="@+id/Button06"
        android:text="@string/static_btn_d3"
        android:textSize="12sp" />

    <Button
        android:id="@+id/Button_d4"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_below="@+id/Button07"
        android:layout_toRightOf="@+id/Button07"
        android:text="@string/static_btn_d4"
        android:textSize="12sp" />

</RelativeLayout>
