<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.bajdcc.cmd.remoteconsole.PushingActivity">

    <Button
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/pushing_start"
        android:id="@+id/btnStart"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/pushing_stop"
        android:id="@+id/btnStop"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/btnStart"
        android:layout_toEndOf="@+id/btnStart" />

    <TextView
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/pushing_message"
        android:id="@+id/textMessage"
        android:layout_below="@+id/btnStart"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:focusable="true"
        android:clickable="true" />

    <Button
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/pushing_nav_prev"
        android:id="@+id/btnNavPrev"
        android:layout_above="@+id/btnLeft"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/pushing_play"
        android:id="@+id/btnPlay"
        android:layout_above="@+id/btnRight"
        android:layout_toRightOf="@+id/btnNavNext"
        android:layout_toEndOf="@+id/btnNavNext" />

    <Button
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/pushing_nav_next"
        android:id="@+id/btnNavNext"
        android:layout_above="@+id/btnLeft"
        android:layout_toRightOf="@+id/btnNavPrev"
        android:layout_toEndOf="@+id/btnNavPrev" />

    <Button
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/pushing_prev"
        android:id="@+id/btnLeft"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/pushing_next"
        android:id="@+id/btnRight"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/btnLeft"
        android:layout_toEndOf="@+id/btnLeft" />

    <Button
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/pushing_cycle"
        android:id="@+id/btnCycle"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/btnRight"
        android:layout_toEndOf="@+id/btnRight" />

    <Button
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/pushing_danmuku"
        android:id="@+id/btnDanmuku"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/btnCycle"
        android:layout_toEndOf="@+id/btnCycle" />
</RelativeLayout>
